account-ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: account-gw
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - account-grpc-demo-istio-system.apps.geardome.duckdns.org
    port:
      name: http2
      number: 80
      protocol: HTTP2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-vs
spec:
  hosts:
  - account-grpc-demo-istio-system.apps.geardome.duckdns.org
  gateways:
  - account-gw
  http:
  - route:
    - destination:
        host: account
        port:
          number: 8080
      weight: 100
